--- a/src/composer.json
+++ b/src/composer.json
@@ -10,7 +10,9 @@
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.0",
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^2.0",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
@@ -44,6 +46,12 @@
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
+        ],
+        "pre-commit": [
+            "@php artisan ide-helper:models --write --reset",
+            "@php ./vendor/bin/phpstan",
+            "@php ./vendor/bin/pint",
+            "@php artisan test"
         ]
     },
     "extra": {
